obsolete:
analysis.f
exzeot.f
forcefield.f
qqcheck.f
readRES.f
test1.f
testupdate.f
thermopress.f
beaddat.inc
gor.inc

added:
physical_constants.f
utilmath.f