@@ -1,12 +1,12 @@
       module util_math
       implicit none
   
-      contains
+!      contains
 
-      subroutine coordinate_transform(x,y,z,invh,sx,sy,sz)
-      real(KIND=double_precision),intent(in)::x,y,z,invhmat
-      real(KIND=double_precision),intent(out)::sx,sy,sz
+!      subroutine coordinate_transform(x,y,z,invh,sx,sy,sz)
+!      real(KIND=double_precision),intent(in)::x,y,z,invhmat
+!      real(KIND=double_precision),intent(out)::sx,sy,sz
     
-      end subroutine coordinate_transform
-      end module utilmath
+!      end subroutine coordinate_transform
+      end module util_math
     
